syntax = "proto3";

package matita;

service GraphStore {
  rpc WriteTriples(WriteRequest) returns (WriteResponse);
  rpc GetTriples(GetTriplesRequest) returns (GetTriplesResponse);
}

message Triple {
  string subject = 1;
  string predicate = 2;
  string object = 3;
}

message WriteRequest {
  repeated Triple triples = 1;
}

message WriteResponse {
  bool success = 1;
}

message GetTriplesRequest {
}

message GetTriplesResponse {
  repeated Triple triples = 1;
}